tests/errors/surf_type_02.ki
# type/operator: None is unordered, '<' is rejected
discard None < None
